test/negative/format_tuple_arg.mut
# format() with tuple argument — should fail
t := (1, 2)
s := format("tuple: {}", t)
print(s)
